# hmgchallenge_public

./: .gitignore  README.md
src/data_collector/: CMakeLists.txt  data_collector.yaml  package.xml
src/data_collector/src/: control_collector.cpp  data_collector.cpp  data_visualizer.cpp  image_collector.cpp
src/decision_maker/: CMakeLists.txt  decision_maker.launch  decision_maker.yaml  package.xml
src/decision_maker/include/: tools.h
src/decision_maker/lib/: tools.cpp
src/decision_maker/src/: decision_maker.cpp  test_dm.cpp
src/global_map/: CMakeLists.txt  package.xml
src/global_map/mission_config/: mission_info.txt  mission_info_backup.txt  mission_info_demo1.txt  mission_info_demo2.txt  mission_info_demo3.txt  mission_info_demo4.txt  mission_info_high_priority.txt  mission_info_shp.txt
src/global_map/raw_data/: Route_1_GPS.csv  Route_1_QGIS.csv  names.csv
src/global_map/scripts/: proj.py  projection_test.py
src/global_map/src/: build_cubic_spline.cpp  build_intersection_map.cpp  draw_possible_map.cpp  segment_collector.cpp  test_smooth.cpp
src/global_map/waypoint/: waypoint.csv  waypoint1.csv  waypoint2.csv  waypoint3.csv  waypoint4.csv  waypoint_high_priority2.csv
src/hellocm_msgs/: CMakeLists.txt
src/hellocm_msgs/msg/: ObjectSensor.msg  ObjectSensorObj.msg  ObservPoint.msg  TrafficLight.msg  VehicleInfo.msg  VehicleState.msg
src/hmg_utils/: CMakeLists.txt  package.xml
src/hmg_utils/include/: GlobalMap.h  Lidar.h  ObjectSensor.h  cubic_spline_1d.h  cubic_spline_2d.h  proj.h  utils.h
src/hmg_utils/lib/: GlobalMap.cpp  Lidar.cpp  ObjectSensor.cpp  cubic_spline_1d.cpp  cubic_spline_2d.cpp  utils.cpp
src/hmg_utils/msg/: Box.msg  BoxArray.msg  ConvexHull.msg  ConvexHullArray.msg  Light.msg  Object.msg  ObjectArray.msg  ObjectId.msg  ObjectInfo.msg  Pedestrian.msg  PedestrianArray.msg  Position.msg  Prediction.msg  PredictionArray.msg  PredictionTrackerTime.msg  Target.msg  Targets.msg
src/hmg_utils/srv/: NearestSegment.srv  PredictionService.srv  SegmentArray.srv
src/light_control_node/: CMakeLists.txt  light_control_node.yaml  package.xml
src/light_control_node/src/: light_control_node.cpp
src/path_planning/: CMakeLists.txt  frenet_optimal_trajectory.yaml  package.xml
src/path_planning/include/: car.h  cpp_struct.h  frenet_optimal_trajectory.h  frenet_path.h  pure_pursuit.h  quartic_polynomial.h  quintic_polynomial.h
src/path_planning/src/: car.cpp  frenet_optimal_trajectory.cpp  frenet_path.cpp  main.cpp  path_planning_node.cpp  pure_pursuit.cpp
src/prediction_tracker/: CMakeLists.txt  package.xml  prediction_tracker.yaml
src/prediction_tracker/include/: History.h
src/prediction_tracker/lib/: History.cpp
src/prediction_tracker/raw_data/: name.csv
src/prediction_tracker/scripts/: proj.py
src/prediction_tracker/src/: build_segment_info.cpp  obstacle_detector.cpp  possible_map_visualizer.cpp  prediction_evaluation.cpp  prediction_tracker.cpp  prediction_tracker_old.cpp  prediction_visualizer.cpp  segment_service.cpp
src/vehicle_detection/: CMakeLists.txt
src/vehicle_detection/src/: PCDetection.cpp  tracker.cpp
src/vehicle_info/: CMakeLists.txt  package.xml
src/vehicle_info/data/: data_post.csv  data_sheet.txt  gimu_10_m2.txt  gimu_10_m3.txt  gimu_10_m4.txt  gimu_10_m5.txt  gimu_10_m6.txt  mass_10_m2.txt  mass_10_m3.txt  mass_10_m4.txt  mass_10_m5.txt  mass_10_m6.txt  pre_existed_data.txt  pre_existed_data2.txt  turning_test.txt
src/vehicle_info/src/: control_data_collector.cpp  kalman_filter.cpp
src/yolo/: CMakeLists.txt  package.xml
src/yolo/config/: obj.data  obj.names  yolo-obj.cfg
src/yolo/launch/: yolo.launch
src/yolo/scripts/: darknet.py  yolo.py
